--- a/app/assets/templates/nav.jst.ejs
+++ b/app/assets/templates/nav.jst.ejs
@@ -1,7 +1,8 @@
-<div class="navbar-inner">
-  <a class="brand" href="#">Gamify</a>
-  <ul class="nav">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#">Logout</a></li>
-  </ul>
+
+<div class="navbar-header">
+      <a class="navbar-brand" href="#">Gamify</a>
 </div>
+<ul class="nav navbar-nav">
+  <li class="active"><a href="#">Home</a></li>
+  <li><a href="#">Logout</a></li>
+</ul>
