allow logging out from backbone

--- a/app/assets/templates/nav.jst.ejs
+++ b/app/assets/templates/nav.jst.ejs
@@ -1,8 +1,8 @@
 
 <div class="navbar-header">
-      <a class="navbar-brand" href="#">Gamify</a>
+    <a class="navbar-brand" href="#">Gamify</a>
 </div>
 <ul class="nav navbar-nav">
   <li class="active"><a href="#">Home</a></li>
-  <li><a href="#">Logout</a></li>
+  <li><a href="session" method="DELETE">Logout</a></li>
 </ul>
