allow adding habits

--- a/app/assets/templates/tasks/index.jst.ejs
+++ b/app/assets/templates/tasks/index.jst.ejs
@@ -1,7 +1,7 @@
 <h1><%= name %></h1>
 
 <form class="add task <%= name %>">
-  <input type="text" name="<%= name %>[title]" placeholder="Add <%= name %>">
+  <input type="text" name="<%= name %>[title]" class="task-title" placeholder="Add <%= name %>">
 
   <span class="btn glyphicon glyphicon-plus"></span>
 </form>
