--- a/app/assets/templates/habits/indexItem.jst.ejs
+++ b/app/assets/templates/habits/indexItem.jst.ejs
@@ -1,3 +1,3 @@
-<%= habit.get('title') %>
+<span class="editable"><%= habit.get('title') %></span>
 
 <span class="btn glyphicon glyphicon-remove"></span>
