--- a/app/assets/templates/tasks/index.jst.ejs
+++ b/app/assets/templates/tasks/index.jst.ejs
@@ -3,7 +3,7 @@
 <form class="add task <%= name %>">
   <input type="text" name="<%= name %>[title]" class="task-title" placeholder="Add <%= name %>">
 
-  <span class="btn glyphicon glyphicon-plus"></span>
+  <span class="add btn glyphicon glyphicon-plus"></span>
 </form>
 
 <ul class="task-list <%= name %>">
