--- a/app/assets/templates/tasks/index.jst.ejs
+++ b/app/assets/templates/tasks/index.jst.ejs
@@ -1,6 +1,6 @@
 <h1><%= name %></h1>
 
-<form class="add task <%= name %>">
+<form class="add-task <%= name %>">
   <input type="text" name="<%= name %>[title]" class="task-title" placeholder="Add <%= name %>">
 
   <span class="add btn glyphicon glyphicon-plus"></span>
