extract most of habitIndexItem into taskIndexItem

--- a/app/assets/templates/habits/indexItem.jst.ejs
+++ b/app/assets/templates/habits/indexItem.jst.ejs
@@ -1,3 +1,3 @@
-<span class="editable"><%= habit.get('title') %></span>
+<span class="editable"><%= model.get('title') %></span>
 
 <span class="btn glyphicon glyphicon-remove"></span>
