--- a/app/assets/stylesheets/api/dailies.css.scss
+++ b/app/assets/stylesheets/api/dailies.css.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the StaticPages controller here.
+// Place all the styles related to the api/Dailies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-.task-box {
-  float: left;
-}
