--- a/app/assets/templates/tasks/index.jst.ejs
+++ b/app/assets/templates/tasks/index.jst.ejs
@@ -6,6 +6,6 @@
   <span class="add btn glyphicon glyphicon-plus"></span>
 </form>
 
-<ul class="task-list <%= name %>">
+<ul class="list-group task-list <%= name %>">
 
 </ul>
