--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -1,3 +1,5 @@
+<span class="check btn glyphicon glyphicon-ok"></span>
+
 <span class="editable"><%= model.get('title') %></span>
 
-<span class="btn glyphicon glyphicon-remove"></span>
+<span class="del btn glyphicon glyphicon-remove"></span>
