different buttons for different types of task

--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -1,4 +1,4 @@
-<span class="check btn glyphicon glyphicon-ok"></span>
+<span class="check btn glyphicon"></span>
 
 <span class="editable"><%= model.get('title') %></span>
 
