display user level

--- a/app/assets/templates/header/userShow.jst.ejs
+++ b/app/assets/templates/header/userShow.jst.ejs
@@ -1,5 +1,6 @@
 <%= user.get("username") %>
 <small>
+  Level <%= user.get("level") %>
   <ul>
     <li><%= user.get("gold") %> Gold</li>
     <li><%= user.get("xp") %> XP</li>
