--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -1,4 +1,5 @@
 <span class="check btn glyphicon"></span>
+<span class="minus btn glyphicon glyphicon-minus hide"></span>
 
 <span class="editable"><%= model.get('title') %></span>
 
