--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -1,6 +1,10 @@
-<span class="check btn glyphicon"></span>
-<span class="minus btn glyphicon glyphicon-minus hide"></span>
+<div class="item">
+  <span class="check btn glyphicon"></span>
+  <span class="minus btn glyphicon glyphicon-minus hide"></span>
+  <span class="editable"><%= model.get('title') %></span>
+  <span class="edit glyphicon glyphicon-pencil"></span>
+</div>
 
-<span class="editable"><%= model.get('title') %></span>
-
-<span class="del btn glyphicon glyphicon-remove"></span>
+<div>
+  stuff
+</div>
