add buttons to edit dropdown

--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -6,5 +6,8 @@
 </div>
 
 <div>
-  stuff
+  <div class="icons">
+    <span class="del glyphicon glyphicon-trash"></span>
+    <span class="save glyphicon glyphicon-ok"></span>
+  </div>
 </div>
