can edit description of tasks

--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -10,4 +10,8 @@
     <span class="del glyphicon glyphicon-trash"></span>
     <span class="save glyphicon glyphicon-ok"></span>
   </div>
+
+  <div class="options">
+    <input type="text" class="description" value="<%= model.get('description') %>" placeholder="description">
+  </div>
 </div>
