add tooltips to display description

--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -1,4 +1,4 @@
-<div class="item">
+<div class="item" data-toggle="tooltip" data-placement="top" title="<%= model.get('description') %>">
   <span class="check btn glyphicon"></span>
   <span class="minus btn glyphicon glyphicon-minus hide"></span>
   <span class="editable"><%= model.get('title') %></span>
