--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -82,3 +82,24 @@
   float: right;
   cursor: pointer;
 }
+
+body{
+  background-image: url("/assets/bg.jpg");
+  width: 100%;
+  height: 100%
+}
+
+body.main {
+  background-image: none;
+}
+
+.form {
+  position: relative;
+  top: 50%;
+  transform: translateY(50%);
+  margin: auto;
+  background: rgba(100,100,100,.5);
+  width: 400px;
+  padding: 20px;
+  color: #66FF99;
+}
