try including background in css

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application'%>
   <%= csrf_meta_tags %>
 </head>
-<body background="<%= image_tag "bg.jpg" %>">
+<body>
 
   <% if flash[:errors] %>
     <% flash[:errors].each do |error| %>
