--- a/app/assets/templates/tasks/index.jst.ejs
+++ b/app/assets/templates/tasks/index.jst.ejs
@@ -1,3 +1,5 @@
+<div class="task-box inner">
+
 <h1><%= name %>s</h1>
 
 <form class="add-task <%= name %>">
@@ -13,3 +15,4 @@
 <ul class="list-group task-list <%= name %>">
 
 </ul>
+</div>
