--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -97,7 +97,10 @@
 }
 
 body {
-  background-image: asset-data-url("bg.jpg")
+  background-image: asset-data-url("bg.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 .form {
