save each click to the database

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -24,6 +24,7 @@
 .btn.add {
   margin-top: -1px;
 }
+
 .checks > span{
   opacity: 0.3;
   border: 1px solid #ccc;
@@ -62,6 +63,7 @@
 }
 
 .title {
+  line-height: 28px;
   padding-left: 10px;
 }
 
