--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -9,7 +9,7 @@
   <span class="edit glyphicon glyphicon-pencil"></span>
 </div>
 
-<div>
+<div class="edit-box">
   <div class="icons">
     <span class="del glyphicon glyphicon-trash"></span>
     <span class="save glyphicon glyphicon-ok"></span>
