--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -1,4 +1,4 @@
-<div class="item" title="<%= model.get('description') %>">
+<div class="item">
   <span class="checks">
     <span class="check glyphicon"></span>
     <span class="minus glyphicon glyphicon-minus hide"></span>
