only make a single ajax request on page load

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,4 +1,4 @@
 <div class="backdrop">
   <div id="main"></div>
 </div>
-<script>$(GamifyApp.initialize);</script>
+<script>$(GamifyApp.initialize(<%= current_user.id %>));</script>
