minor styling changes

--- a/app/assets/templates/tasks/index.jst.ejs
+++ b/app/assets/templates/tasks/index.jst.ejs
@@ -1,6 +1,6 @@
 <div class="task-box inner">
 
-<h1><%= name %>s</h1>
+<h1><%= name === "Daily" ? "Dailie" : name %>s</h1>
 
 <form class="add-task <%= name %>">
   <div class="input-group">
