--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,6 +1,56 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.tags{
+  clear: left;
+}
+
+.tags .delete {
+  cursor: pointer;
+}
+
+.tags .tag.delete {
+  background: rgba(169, 68, 66, .9);
+}
+
+.tags .tag {
+  background: rgba(102, 255, 153, .5);
+  margin: 3px;
+  border-radius: 4px;
+  color: black;
+  cursor: pointer;
+}
+.tag.active {
+  background: rgba(102, 255, 153, .9);
+}
+
+.tags *{
+  color: #66FF99;
+  list-style-type: none;
+  float: left;
+  padding: 4px;
+  margin-top: -3px;
+}
+
+.new-tag-form {
+  float: left;
+  background: rgba(100,100,100, .5);
+}
+
+.new-tag-form .name {
+  background: transparent;
+  border: none;
+  margin-top: 1px;
+}
+
+.new-tag-form .name:focus{
+  outline: none;
+}
+
+.new-tag{
+  cursor: pointer;
+  margin-top: 1px;
+}
 
 .edit-box {
   padding-top: 30px;
@@ -16,6 +66,10 @@
   color: #d9534f;
 }
 
+.bars {
+  width: 200px;
+  float: left;
+}
 .stat-icon.xp {
   color: #f0ad4e;
 }
@@ -72,10 +126,6 @@
   padding-left: 10px;
 }
 
-.bars {
-  width: 200px;
-  float: left;
-}
 
 .task-box {
   padding: 5px;
