tasks refresh tags on add/delete

--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -15,14 +15,19 @@
     <span class="save glyphicon glyphicon-ok"></span>
   </div>
 
-  <div class="options">
-    <input type="text" class="description" value="<%= model.escape('description') %>" placeholder="description">
+  <form class="options">
+    <input type="text" class="description" name="description" value="<%= model.escape('description') %>" placeholder="description">
 
     <ul class="taskTags">
       <% tags.each(function(tag){ %>
-        <input type="checkbox" name="tag_ids[]" id="tag_<%= tag.escape("name") %>" value="<%= tag.id %>">
+        <% if (model.tags().contains(tag)){%>
+         <% checked = "checked" %>
+        <% } else { %>
+          <% checked = "" %>
+        <% } %>
+        <input type="checkbox" name="tag_ids[]" id="tag_<%= tag.escape("name") %>" value="<%= tag.id %>" <%= checked %>>
         <label for="tag_<%= tag.escape("name") %>"><%= tag.escape("name") %></label>
       <% }) %>
     </ul>
-  </div>
+  </form>
 </div>
