taggings show up in view

--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -20,7 +20,7 @@
 
     <ul class="taskTags">
       <% tags.each(function(tag){ %>
-        <% if (model.tags().contains(tag)){%>
+        <% if (model.tags().get(tag.id)){%>
          <% checked = "checked" %>
         <% } else { %>
           <% checked = "" %>
