--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -35,6 +35,7 @@
 .new-tag-form {
   float: left;
   background: rgba(100,100,100, .5);
+  border-radius: 3px;
 }
 
 .new-tag-form .name {
@@ -125,7 +126,6 @@
   line-height: 28px;
   padding-left: 10px;
 }
-
 
 .task-box {
   padding: 5px;
