add tipr tooltips that don't break accordion

--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -1,4 +1,4 @@
-<div class="item">
+<div class="item tip" data-tip="<%= model.escape('description') ? model.escape('description') : "" %>">
   <span class="checks">
     <span class="check glyphicon"></span>
     <span class="minus glyphicon glyphicon-minus hide"></span>
