--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.task-tags {
+  list-style-type: none;
+}
+
 .tags{
   clear: left;
 }
@@ -53,8 +57,11 @@
   margin-top: 1px;
 }
 
-.edit-box {
-  padding-top: 30px;
+.item-box {
+  border-top: 1px solid #dddddd;
+  margin-top: 10px;
+  padding-top: 10px;
+  height: 300px;
 }
 
 .stat-icon {
