--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -9,26 +9,29 @@
   <span class="edit glyphicon glyphicon-pencil"></span>
 </div>
 
-<div class="edit-box">
+<div class="item-box">
   <div class="icons">
     <span class="del glyphicon glyphicon-trash"></span>
   </div>
 
   <form class="options">
     <span class="description">
-      Description:
+      <h3>Description:</h3>
       <span class="editable"><%= model.escape('description') ? model.escape('description') : "add description"%></span>
     </span>
 
-    <ul class="taskTags">
+    <h3>Tags:</h3>
+    <ul class="task-tags">
       <% tags.each(function(tag){ %>
         <% if (model.tags().get(tag.id)){%>
          <% checked = "checked" %>
         <% } else { %>
           <% checked = "" %>
         <% } %>
-        <input type="checkbox" name="tag_ids[]" id="tag_<%= tag.escape("name") %>" value=<%= tag.id %> <%= checked %>>
-        <label for="tag_<%= tag.escape("name") %>"><%= tag.escape("name") %></label>
+        <li>
+          <input type="checkbox" name="tag_ids[]" id="tag_<%= tag.escape("name") %>" value=<%= tag.id %> <%= checked %>>
+          <label for="tag_<%= tag.escape("name") %>"><%= tag.escape("name") %></label>
+        </li>
       <% }) %>
     </ul>
   </form>
