--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -1,38 +1,14 @@
-<div class="item tip" data-tip="<%= model.escape('description') ? model.escape('description') : "" %>">
+<div class="item tip" data-tip="<%= task.escape('description') ? task.escape('description') : "" %>">
   <span class="checks">
     <span class="check glyphicon"></span>
     <span class="minus glyphicon glyphicon-minus hide"></span>
   </span>
   <span class="title">
-    <span class="editable"><%= model.escape('title') %></span>
+    <span class="editable"><%= task.escape('title') %></span>
   </span>
   <span class="edit glyphicon glyphicon-pencil"></span>
 </div>
 
 <div class="item-box">
-  <div class="icons">
-    <span class="del glyphicon glyphicon-trash"></span>
-  </div>
 
-  <form class="options">
-    <span class="description">
-      <h3>Description:</h3>
-      <span class="editable"><%= model.escape('description') ? model.escape('description') : "add description"%></span>
-    </span>
-
-    <h3>Tags:</h3>
-    <ul class="task-tags">
-      <% tags.each(function(tag){ %>
-        <% if (model.tags().get(tag.id)){%>
-         <% checked = "checked" %>
-        <% } else { %>
-          <% checked = "" %>
-        <% } %>
-        <li>
-          <input type="checkbox" name="tag_ids[]" id="tag_<%= tag.escape("name") %>" value=<%= tag.id %> <%= checked %>>
-          <label for="tag_<%= tag.escape("name") %>"><%= tag.escape("name") %></label>
-        </li>
-      <% }) %>
-    </ul>
-  </form>
 </div>
