--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -7,6 +7,7 @@
     <span class="editable"><%= task.escape('title') %></span>
   </span>
   <span class="edit glyphicon glyphicon-pencil"></span>
+  <span class="graph glyphicon glyphicon-stats"></span>
 </div>
 
 <div class="item-box">
