--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -3,9 +3,9 @@
     <span class="check glyphicon"></span>
     <span class="minus glyphicon glyphicon-minus hide"></span>
   </span>
-  <span class="title">
+  <div class="title">
     <span class="editable"><%= task.escape('title') %></span>
-  </span>
+  </div>
   <span class="edit glyphicon glyphicon-pencil"></span>
   <span class="graph glyphicon glyphicon-stats"></span>
 </div>
