allow unchecking last checkbox

--- a/app/assets/templates/tasks/taskEdit.jst.ejs
+++ b/app/assets/templates/tasks/taskEdit.jst.ejs
@@ -21,5 +21,7 @@
         <label for="tag_<%= tag.escape("name") %>"><%= tag.escape("name") %></label>
       </li>
     <% }) %>
+
+    <input type="hidden" name="tag_ids[]" value="">
   </ul>
 </form>
