--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,6 +1,14 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.plus-minus {
+  display: none;
+}
+
+.habit .plus-minus{
+  display: block;
+}
+
 .task-tags {
   list-style-type: none;
 }
@@ -61,7 +69,11 @@
   border-top: 1px solid #dddddd;
   margin-top: 10px;
   padding-top: 10px;
-  height: 300px;
+  min-height: 300px;
+}
+
+.habit .item-box{
+  height: 400px;
 }
 
 .stat-icon {
@@ -117,14 +129,11 @@
   opacity: 1.0;
   background: rgba(100,100,100,.2);
 }
-.checks > span.habit {
+.checks.gb > span {
   height: 50%;
   padding-top: 5px;
 }
-.checks > span.minus {
-  height: 50%;
-  padding-top: 5px;
-}
+
 .item {
   min-height: 30px;
   cursor: move;
