--- a/app/assets/templates/tasks/taskEdit.jst.ejs
+++ b/app/assets/templates/tasks/taskEdit.jst.ejs
@@ -13,7 +13,12 @@
     <span class="plus btn glyphicon glyphicon-plus"></span>
     <span class="min btn glyphicon glyphicon-minus"></span>
   </div>
-  
+
+  <div class="cost">
+    <h3>Cost:</h3>
+    <input class="spinner" name="cost">
+  </div>
+
   <h3>Tags:</h3>
   <ul class="task-tags">
     <% tags.each(function(tag){ %>
