--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="form">
-  <h1>Gamify App!</h1>
+  <h1>Gamifi.life</h1>
   <form id="signup" action="<%= users_url %>" method="post">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
@@ -10,16 +10,16 @@
     <div class="form-group">
       <input class="form-control" type="password" name="user[password]" placeholder="password">
     </div>
-
-    <input type="submit" class="btn btn-default" value="Play" id="Play">
   </form>
 
-  <a href="<%= new_session_url %>"><button name="Sign In" class="btn btn-default">Sign In</button></a>
-
-  <form method="post" action="<%= session_url %>">
-    <input type="submit" class="btn btn-default" value="Sign In as Guest!">
-    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-    <input type="hidden" name="user[username]" value="Guest">
-    <input type="hidden" name="user[password]" value="password">
-  </form>
+  <div class="btns">
+    <input type="submit" form="signup" class="btn btn-default btn-play btn-info btn-lg" value="Play" id="Play">
+    <a href="<%= new_session_url %>"><button name="Sign In" class="btn btn-default btn-sign btn-primary btn-lg">Sign In</button></a>
+    <form method="post" action="<%= session_url %>">
+      <input type="submit" class="btn btn-default btn-guest btn-success btn-lg" value="Sign In as Guest!">
+      <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+      <input type="hidden" name="user[username]" value="Guest">
+      <input type="hidden" name="user[password]" value="password">
+    </form>
+  </div>
 </div>
