--- a/app/assets/templates/header/nav.jst.ejs
+++ b/app/assets/templates/header/nav.jst.ejs
@@ -1,6 +1,6 @@
 
 <div class="navbar-header">
-    <a class="navbar-brand" href="#">Gamify</a>
+    <a class="navbar-brand" href="#">Gamifi.life</a>
 </div>
 <ul class="nav navbar-nav">
   <li class="active"><a href="#">Home</a></li>
