try to fix image links

--- a/app/assets/templates/header/userShow.jst.ejs
+++ b/app/assets/templates/header/userShow.jst.ejs
@@ -22,6 +22,6 @@
 </div>
 
 <div class="money col-md-1 col-md-offset-1">
-  <img alt="Gold" src="/assets/Gold.png" />
+  <img alt="Gold" src="public/assets/Gold.png" />
   <%= user.get("gold") %>
 </div>
