--- a/app/assets/templates/header/nav.jst.ejs
+++ b/app/assets/templates/header/nav.jst.ejs
@@ -1,6 +1,6 @@
 
 <div class="navbar-header">
-    <a class="navbar-brand" href="#"><img alt="logo" src="/assets/logoHead.png" /></a>
+    <a class="navbar-brand" href="#"><img alt="logo" src="public/assets/logoHead.png" /></a>
 </div>
 <ul class="nav navbar-nav">
   <li class="active"><a href="#">Home</a></li>
