image tags in css instead of js

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -102,7 +102,8 @@
   color: #E3C832;
 }
 
-.money img{
+.money .coins{
+  content: asset-data-url("Gold.png");
   float: left;
   margin-right: 7px;
 }
@@ -320,7 +321,8 @@ li.list-group-item-primary {
   color: #66FF99;
 }
 
-.navbar img {
+.navbar .logo{
+  content: asset-data-url("logoHead.png");
   height: 130%;
   width: auto;
 }
