--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -9,8 +9,14 @@
   display: block;
 }
 
-.selected {
-  color: #333333;
+.plus-minus > .btn {
+  opacity: 0.3;
+  background: rgba(100,100,100,.2);
+}
+
+.plus-minus > .btn:hover, .plus-minus > .btn.selected{
+  opacity: 1.0;
+  background: rgba(100,100,100,.2);
 }
 
 .task-tags {
