no graph for todos

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -86,9 +86,14 @@
   height: 400px;
 }
 
+.todo .graph {
+  display: none;
+}
+
 .bars {
   width: 200px;
   float: left;
+  margin-left: 40px;
 }
 
 .stat-icon{
