--- a/app/assets/templates/tasks/indexItem.jst.ejs
+++ b/app/assets/templates/tasks/indexItem.jst.ejs
@@ -1,7 +1,7 @@
 <div class="item tip" data-tip="<%= task.escape('description') ? task.escape('description') : "" %>">
   <span class="checks">
-    <span class="check glyphicon"><span class="coin"></span><%= task.get("cost") ? (task.get("cost")) : ''%></span>
-    <span class="minus glyphicon glyphicon-minus hide"></span>
+    <span class="check glyphicon tilt"><span class="coin"></span><%= task.get("cost") ? (task.get("cost")) : ''%></span>
+    <span class="minus glyphicon glyphicon-minus hide tilt"></span>
   </span>
   <div class="title">
     <span class="editable"><%= task.escape('title') %></span>
