--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  *= require tipr
+ *= require shepherd-theme-default
  */
 
  @import "bootstrap-sprockets";
